<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ipshift.SysActivity"
    tools:showIn="@layout/activity_sys">
    <TextView
        android:id="@+id/co_sytv01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#9999e9"
        android:text="@string/choice_type" />
    <LinearLayout
        android:id="@+id/co_syll01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/co_sytv01"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/co_sysp01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  ->  "/>
        <Spinner
            android:id="@+id/co_sysp02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/co_syll02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/co_syll01"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/co_syet01"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:digits="@string/input_type"
            android:hint="@string/int_sec"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."/>
        <EditText
            android:id="@+id/co_syet02"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="@string/input_type"
            android:hint="@string/decimal_sec"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/co_syll03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/co_syll02"
        android:orientation="horizontal">
        <Button
            android:id="@+id/co_sybt01"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_centerHorizontal="true"
            android:background="#8686e4"
            android:text="@string/cal"/>
        <Button
            android:id="@+id/co_sybt02"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#8686e4"
            android:text="@string/clear"/>
    </LinearLayout>
    <TextView
        android:id="@+id/co_sytv02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/co_syll03"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="#9999e9"
        android:textSize="20sp"
        android:text=""/>
    <Button
        android:id="@+id/co_sybt03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/co_sytv02"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        android:text=""/>
    <TextView
        android:id="@+id/co_sytv03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/co_sybt03"
        android:layout_centerHorizontal="true"
        android:background="#9999e9" />
</RelativeLayout>
